# rrt_drone_system

./: .gitignore  README.md
groundpc/src/rrt_drone/config/: fastdds_server.xml
groundpc/src/rrt_drone/rrt_drone/nodes/: path_planner_node.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/rrt_drone/share/rrt_drone/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rrt_drone/share/rrt_drone/config/: fastdds_server.xml
install/rrt_drone/share/rrt_drone/launch/: pc_planner.launch.py
log/: latest_build
rpicode/rrt_drone_ws/src/rrt_drone/: package.xml  setup.py
rpicode/rrt_drone_ws/src/rrt_drone/config/: fastdds_client.xml  mavros_config.yaml  rrt_params.yaml
rpicode/rrt_drone_ws/src/rrt_drone/launch/: rpi_system.launch.py
rpicode/rrt_drone_ws/src/rrt_drone/rrt_drone/nodes/: command_executor_node.py  health_monitor_node.py
src/rrt_drone/: package.xml  setup.py
src/rrt_drone/launch/: pc_planner.launch.py
src/rrt_drone/rrt_drone/config/: rrt_params.yaml
